# skillbox

1/: main.cpp
16/4/: main.cpp
16/skillbox_5/: Sensor.h  abstract_sensor.cpp  abstract_sensor.h  main.cpp  skillbox_5.pro  smart_home.cpp  time_of_day.cpp  time_of_day.h
2/: main.cpp
3/: main.cpp
4/: main.cpp
build-skillbox_5-Desktop-Debug/: Makefile  skillbox_5
librobo/: CMakeLists.txt  main.cpp  skillbox C++ робот, вторая часть.odt
librobo/include/: irobot.h  position.h  robot_1d.h  robot_2d.h  robot_3d.h  robot_4d.h  robot_xd.h
librobo/src/: CMakeLists.txt  position.cpp  robot_1d.cpp  robot_2d.cpp  robot_3d.cpp  robot_4d.cpp  robot_xd.cpp
skillbox_5/: Emulated_system.cpp  Emulated_system.h  Sensor.h  abstract_sensor.cpp  abstract_sensor.h  device.cpp  device.h  main.cpp  skillbox_5.pro.user.ec3af7a  smart_home.cpp  smart_home.h  smart_light.cpp  smart_light.h  time_of_day.cpp  time_of_day.h
